# book-exchange-app

./: .dockerignore  Dockerfile  README.md  book_exchange.db  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  security.py
client/: app.js  index.html  styles.css
routes/: auth.py  books.py  exchanges.py  users.py
