[tool.poetry]
name = "book-exchange-app"
version = "0.1.0"
description = "An open-source FastAPI application for school families to exchange textbooks and reading books."
authors = ["Your Name <inaki@ifuentes.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "book_exchange_app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
sqlmodel = "^0.0.8"
passlib = "^1.7.4"
python-jose = "^3.3.0"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"

# Email validation for Pydantic
email-validator = "^1.3.0"
# Required for FastAPI form parsing (OAuth2)
python-multipart = "^0.0.20"
# PostgreSQL driver
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.28.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
